src/core-crm/objects/Engagement_Opportunity__c/Engagement_Opportunity__c.object-meta.xml
<CustomObject>
    <description>Engagement Opportunity captures information for Alumni Engagement and Corporate Engagement business processes.</description>
    <label>Engagement Opportunity</label>
    <nameField>
        <displayFormat>EO-{000000}</displayFormat>
        <label>Engagement Opportunity Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Engagement Opportunities</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>