src/core-crm/objects/Engagement_Opportunity__c/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <description>The date the Engagement Opportunity closed.</description>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>