src/core-crm/objects/Engagement_Opportunity__c/fields/Coordinating_Team__c.field-meta.xml
<CustomField>
    <fullName>Coordinating_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The QUT team responsible for coordinating the Engagement Opportunity.</description>
    <label>Coordinating Team</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND (2 OR 3) AND 4</booleanFilter>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>University Department</value>
        </filterItems>
        <filterItems>
            <field>Account.Organization_Unit_Level__c</field>
            <operation>equals</operation>
            <value>3</value>
        </filterItems>
        <filterItems>
            <field>Account.Organization_Unit_Level__c</field>
            <operation>equals</operation>
            <value>4</value>
        </filterItems>
        <filterItems>
            <field>Account.End_Date__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Engagement Opportunities (Coordinating Team)</relationshipLabel>
    <relationshipName>Engagement_Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>