src/core-crm/objects/Engagement_Opportunity__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <description>The date the Engagement Opportunity is due.</description>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>