src/core-crm/objects/Engagement_Opportunity__c/fields/Engagement_Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Opportunity_Name__c</fullName>
    <description>The business-defined name for the Engagement.</description>
    <inlineHelpText>The business-defined name for the Engagement.</inlineHelpText>
    <label>Engagement Opportunity Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>