src/core-crm/objects/Engagement_Opportunity__c/fields/Engagement_Opportunity_Type__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Opportunity_Type__c</fullName>
    <description>Identifies the different focal points of a corporate engagement.</description>
    <label>Engagement Opportunity Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Event</fullName>
            </value>
            <value>
                <fullName>Scholarship</fullName>
            </value>
            <value>
                <fullName>Sponsorship</fullName>
            </value>
            <value>
                <fullName>Work Integrated Learning (WIL)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>