src/core-crm/objects/Engagement_Opportunity__c/fields/Requester_Name__c.field-meta.xml
<CustomField>
    <fullName>Requester_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The QUT staff member requesting the engagement opportunity.</description>
    <label>Requester Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>Person</value>
        </filterItems>
        <filterItems>
            <field>Contact.QUT_Employee_ID__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Engagement Opportunities</relationshipLabel>
    <relationshipName>Engagement_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>