src/core-crm/objects/Engagement_Opportunity__c/fields/Requesting_Faculty__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Faculty__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The QUT Faculty requesting the engagement opportunity.</description>
    <label>Requesting Faculty</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>University Department</value>
        </filterItems>
        <filterItems>
            <field>Account.Organization_Unit_Level__c</field>
            <operation>equals</operation>
            <value>2</value>
        </filterItems>
        <filterItems>
            <field>Account.End_Date__c</field>
            <operation>equals</operation>
            <value></value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Engagement Opportunities</relationshipLabel>
    <relationshipName>Engagement_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>