src/core-crm/objects/Engagement_Opportunity__c/fields/Score_Category__c.field-meta.xml
<CustomField>
    <fullName>Score_Category__c</fullName>
    <description>Engagement Opportunity classification category.</description>
    <label>Score Category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Communications/Promotion</fullName>
            </value>
            <value>
                <fullName>Corporate and Commercial Connection</fullName>
            </value>
            <value>
                <fullName>Governance and Strategy</fullName>
            </value>
            <value>
                <fullName>Lifelong Connection (Alumnus)</fullName>
            </value>
            <value>
                <fullName>Lifelong Connection (Student)</fullName>
            </value>
            <value>
                <fullName>Philanthropic</fullName>
            </value>
            <value>
                <fullName>Research</fullName>
            </value>
            <value>
                <fullName>Return to Study</fullName>
            </value>
            <value>
                <fullName>Teaching and Learning</fullName>
            </value>
            <value>
                <fullName>Thought Leadership/Expertise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>