src/core-crm/objects/Engagement_Opportunity__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The date the Engagement Opportunity commenced.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>