src/core-crm/objects/Engagement_Opportunity__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <description>Description providing the business context of the engagement.</description>
    <label>Summary</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>