src/core-crm/objects/Engagement_Opportunity__c/recordTypes/Alumni_Engagement.recordType-meta.xml
<RecordType>
    <fullName>Alumni_Engagement</fullName>
    <active>true</active>
    <description>The specific business development interaction that has been identified for alumni participation</description>
    <label>Alumni Engagement</label>
</RecordType>