src/core-crm/objects/Engagement_Opportunity__c/recordTypes/Corporate_Engagement.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Engagement</fullName>
    <active>true</active>
    <description>The specific business development interaction that has been identified for Corporate participation</description>
    <label>Corporate Engagement</label>
</RecordType>