src/core-crm/objects/Engagement_Opportunity__c/validationRules/CE_Engage_Stage_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>CE_Engage_Stage_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName =&quot;Corporate_Engagement&quot;,
ISCHANGED(Stage__c),
ISPICKVAL( PRIORVALUE(Stage__c),&quot;Engage&quot;),
NOT(ISPICKVAL( Stage__c, &apos;Closed&apos;))
)</errorConditionFormula>
    <errorDisplayField>Stage__c</errorDisplayField>
    <errorMessage>You can only progress to next stage which is closed.</errorMessage>
</ValidationRule>