src/core-crm/objects/Engagement_Opportunity__c/validationRules/CE_Identify_Stage_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>CE_Identify_Stage_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &apos;Corporate_Engagement&apos;,
ISCHANGED( Stage__c),
ISPICKVAL( PRIORVALUE( Stage__c) , &apos;Identify&apos;),
NOT( ISPICKVAL( Stage__c, &apos;Engage&apos;) ),
NOT( ISPICKVAL( Stage__c , &apos;Closed&apos;) ) )</errorConditionFormula>
    <errorDisplayField>Stage__c</errorDisplayField>
    <errorMessage>You can only progress to the next stage which is Engage or mark the Opportunity as Closed.</errorMessage>
</ValidationRule>