src/core-crm/objects/Engagement_Opportunity__c/validationRules/New_Stage_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>New_Stage_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED( Stage__c ),
ISPICKVAL( PRIORVALUE(Stage__c ) ,&quot;New&quot;),
AND(NOT(ISPICKVAL( Stage__c , &apos;Identify&apos;)),
NOT(ISPICKVAL( Stage__c , &apos;Closed&apos;)))
)</errorConditionFormula>
    <errorDisplayField>Stage__c</errorDisplayField>
    <errorMessage>You can only progress to the next stage which is Identify or mark the Opportunity as Closed</errorMessage>
</ValidationRule>