src/core-crm/objects/Engagement_Opportunity__c/validationRules/Requesting_Faculty_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Requesting_Faculty_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
ISCHANGED(Stage__c),
ISPICKVAL(Stage__c, &quot;Identify&quot;),
ISBLANK( Requesting_Faculty__c )
)</errorConditionFormula>
    <errorDisplayField>Requesting_Faculty__c</errorDisplayField>
    <errorMessage>Mandatory Field</errorMessage>
</ValidationRule>