src/core-crm/objects/Engagement_Opportunity__c/validationRules/Requestor_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Requestor_is_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND (
ISCHANGED(Stage__c),
ISPICKVAL(Stage__c, &quot;Identify&quot;),
ISBLANK(Requestor_Name__c)
)</errorConditionFormula>
    <errorDisplayField>Requestor_Name__c</errorDisplayField>
    <errorMessage>Mandatory Field</errorMessage>
</ValidationRule>