src/core-crm/objects/Engagement_Opportunity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Engagement_Opportunity_Name__c</columns>
    <columns>Engagement_Opportunity_Type__c</columns>
    <columns>Score_Category__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>