src/core-crm/objects/Engagement_Opportunity__c/listViews/Corporate_Engagement_Opportunities.listView-meta.xml
<ListView>
    <fullName>Corporate_Engagement_Opportunities</fullName>
    <columns>NAME</columns>
    <columns>Engagement_Opportunity_Name__c</columns>
    <columns>Engagement_Opportunity_Type__c</columns>
    <columns>Score_Category__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Engagement_Opportunity__c.Corporate_Engagement</value>
    </filters>
    <label>Corporate Engagement Opportunities</label>
    <sharedTo>
        <group>Alumni_Corporate_Partnerships</group>
    </sharedTo>
</ListView>